testing notebbok in colab

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -19,7 +19,10 @@
    "outputs": [],
    "source": [
     "#@title Input sequence\n",
-    "input_sequence = \"\"\"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"\"\"  #@param {type:\"string\"}"
+    "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
+    "# To dataframe\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame({'sequence': [input_sequence]})"
    ]
   },
   {
@@ -32,17 +35,20 @@
     "#@title Download models from HuggingFace\n",
     "import os\n",
     "import urllib.request\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "os.makedirs(\"nodels\", exist_ok=True)\n",
-    "base_url = \"https://huggingface.co/alvaro-2/aggrescanai/tree/main\"\n",
+    "os.makedirs(\"models\", exist_ok=True)\n",
+    "base_url = \"https://huggingface.co/alvaro-2/aggrescanai/resolve/main\"\n",
     "model_names = [\n",
     "    f\"balanced_models/balanced_model_1_1_{i}.h5\" for i in range(1, 34)\n",
     "]\n",
-    "for fname in model_names:\n",
-    "    model_url = f\"{base_url}{fname}\"\n",
-    "    model_path = f\"models/{os.path.basename(fname)}\"\n",
+    "# Download balanced models\n",
+    "print(\"Downloading balanced models...\")\n",
+    "for fname in tqdm(model_names):\n",
+    "    model_url = f\"{base_url}/{fname}\"\n",
+    "    os.makedirs(os.path.dirname(f\"models/balanced_models/\"), exist_ok=True)\n",
+    "    model_path = f\"models/balanced_models/{os.path.basename(fname)}\"\n",
     "    if not os.path.exists(model_path):\n",
-    "        print(f\"Downloading {fname}...\")\n",
     "        urllib.request.urlretrieve(model_url, model_path)\n",
     "\n",
     "# Download homology models\n",
@@ -50,11 +56,12 @@
     "    f\"homology_models/cpad_hotidp90_model_cv_{i}.h5\" for i in range(1, 6)\n",
     "]\n",
     "\n",
-    "for fname in homology_model_names:\n",
-    "    model_url = f\"{base_url}{fname}\"\n",
-    "    model_path = f\"models/{os.path.basename(fname)}\"\n",
+    "print(\"Downloading homology models...\")\n",
+    "for fname in tqdm(homology_model_names):\n",
+    "    model_url = f\"{base_url}/{fname}\"\n",
+    "    os.makedirs(os.path.dirname(f\"models/homology_models/\"), exist_ok=True)\n",
+    "    model_path = f\"models/homology_models/{os.path.basename(fname)}\"\n",
     "    if not os.path.exists(model_path):\n",
-    "        print(f\"Downloading {fname}...\")\n",
     "        urllib.request.urlretrieve(model_url, model_path)"
    ]
   },
@@ -67,8 +74,8 @@
    "source": [
     "#@title Load models\n",
     "from tensorflow.keras.models import load_model\n",
-    "models = [load_model(f\"models/{os.path.basename(fname)}\", compile= False) for fname in model_names]\n",
-    "homology_models = [load_model(f\"models/{os.path.basename(fname)}\", compile= False) for fname in homology_model_names]"
+    "models = [load_model(f\"models/balanced_models/{os.path.basename(fname)}\", compile= False) for fname in model_names]\n",
+    "homology_models = [load_model(f\"models/homology_models/{os.path.basename(fname)}\", compile= False) for fname in homology_model_names]"
    ]
   },
   {
@@ -82,7 +89,6 @@
     "import torch\n",
     "from transformers import T5Tokenizer, T5EncoderModel\n",
     "from tqdm import tqdm\n",
-    "import pandas as pd\n",
     "import re\n",
     "\n",
     "# Load ProtT5 tokenizer and model\n",
@@ -96,7 +102,35 @@
     "    ids = tokenizer(spaced, add_special_tokens=True, return_tensors=\"pt\").to(device)\n",
     "    with torch.no_grad():\n",
     "        out = model(input_ids=ids[\"input_ids\"], attention_mask=ids[\"attention_mask\"])\n",
-    "    return out.last_hidden_state[0, :-1].cpu().numpy()\n"
+    "    return out.last_hidden_state[0, :-1].cpu().numpy()\n",
+    "\n",
+    "tqdm.pandas(desc=\"Generating embeddings\")\n",
+    "df[\"embedding\"] = df[\"sequence\"].progress_map(generate_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbcb568b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Apply soft-voting function\n",
+    "import numpy as np\n",
+    "def avg_probs(models, X, batch_size=32):\n",
+    "    \"\"\"\n",
+    "    models: list of keras.Model\n",
+    "    X: numpy array de forma (n_samples, n_features)\n",
+    "    devuelve: vector numpy (n_samples,) con la probabilidad media\n",
+    "    \"\"\"\n",
+    "    all_preds = []\n",
+    "    for m in models:\n",
+    "        # model.predict devuelve shape (n_samples, 1) o (n_samples,)\n",
+    "        p = m.predict(X, batch_size=batch_size)\n",
+    "        p = p.reshape(-1)  # asegurar (n_samples,)\n",
+    "        all_preds.append(p)\n",
+    "    all_preds = np.stack(all_preds, axis=0)   # (n_models, n_samples)\n",
+    "    return np.mean(all_preds, axis=0)         # (n_samples,)"
    ]
   }
  ],
