--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -13,16 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "17b2688f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Input sequence\n",
+    "#@title Input protein data\n",
+    "#@markdown Enter a protein sequence in the box below. The sequence should be in single-letter amino acid code format (e.g., \"M\", \"D\", \"V\", etc.). The sequence will be processed and converted into a DataFrame for further analysis.\n",
+    "#@markdown You can also use the example sequence provided below.\n",
+    "uniprot_id = \"P37840\"  #@param {type:\"string\"}\n",
     "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
     "# To dataframe\n",
     "import pandas as pd\n",
-    "df = pd.DataFrame({'sequence': [input_sequence]})"
+    "df = pd.DataFrame({'uniprot_id': [uniprot_id], 'sequence': [input_sequence]})"
    ]
   },
   {
@@ -120,8 +123,8 @@
     "def avg_probs(models, X, batch_size=32):\n",
     "    \"\"\"\n",
     "    models: list of keras.Model\n",
-    "    X: numpy array de forma (n_samples, n_features)\n",
-    "    devuelve: vector numpy (n_samples,) con la probabilidad media\n",
+    "    X: numpy array of shape (n_samples, n_features)\n",
+    "    returns: numpy vector (n_samples,) with mean probability\n",
     "    \"\"\"\n",
     "    all_preds = []\n",
     "    for m in models:\n",
@@ -130,7 +133,93 @@
     "        p = p.reshape(-1)  # asegurar (n_samples,)\n",
     "        all_preds.append(p)\n",
     "    all_preds = np.stack(all_preds, axis=0)   # (n_models, n_samples)\n",
-    "    return np.mean(all_preds, axis=0)         # (n_samples,)"
+    "    return np.mean(all_preds, axis=0)         # (n_samples,)\n",
+    "\n",
+    "# Ensemble function\n",
+    "def ensemble_meta_probs(embedding, weights=(0.1, 0.9)):\n",
+    "    \"\"\"\n",
+    "    embedding: np.array de forma (L, 1024)\n",
+    "    devuelve: vector de probabilidades de forma (L,)\n",
+    "    \"\"\"\n",
+    "    # obtenemos promedios por familia\n",
+    "    p90 = avg_probs(homology_models, embedding)   # (L,)\n",
+    "    p33 = avg_probs(models, embedding)   # (L,)\n",
+    "    # weighted soft-voting\n",
+    "    return weights[0]*p90 + weights[1]*p33 # (L,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed33f0d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Run Predictions\n",
+    "tqdm.pandas(desc=\"Computing probabilities\")\n",
+    "df[\"prob_vector\"] = df[\"embedding\"].progress_map(ensemble_meta_probs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94cf8a7c",
+   "metadata": {},
+   "source": [
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7423249f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Visualize results\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "def plot_probability_profile(uniprot_id: str, threshold: float = 0.5):\n",
+    "    \"\"\"\n",
+    "    Plot the probability profile per position given an uniprot_id and a threshold.\n",
+    "    \"\"\"\n",
+    "    # Filter\n",
+    "    mask = df['uniprot_id'] == uniprot_id\n",
+    "    if not mask.any():\n",
+    "        print(f\"UniProt ID '{uniprot_id}' not found.\")\n",
+    "        return\n",
+    "    prob_vector = df.loc[mask, 'prob_vector'].values[0]\n",
+    "    positions = np.arange(1, len(prob_vector) + 1)\n",
+    "\n",
+    "    # Create figure\n",
+    "    fig = go.Figure()\n",
+    "\n",
+    "    # Plot probability profile\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=positions,\n",
+    "        y=prob_vector,\n",
+    "        mode='lines+markers',\n",
+    "        name='Probability',\n",
+    "        hovertemplate='Position %{x}<br>Prob: %{y:.3f}<extra></extra>'\n",
+    "    ))\n",
+    "\n",
+    "    # Set threshold line\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=[positions[0], positions[-1]],\n",
+    "        y=[threshold, threshold],\n",
+    "        mode='lines',\n",
+    "        name=f'Threshold = {threshold}',\n",
+    "        line=dict(color='red', dash='dash')\n",
+    "    ))\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        title=f'Aggregation probability profile: {uniprot_id}',\n",
+    "        xaxis_title='Position',\n",
+    "        yaxis_title='Probability',\n",
+    "        hovermode='x unified'\n",
+    "    )\n",
+    "\n",
+    "    fig.show()"
    ]
   }
  ],
