updated notebook - save plot and table

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -6,23 +6,46 @@
    "metadata": {},
    "source": [
     "# AggrescanAI  \n",
-    "Colab notebook user-friendy to calculate aggregation propensities using protein language models and deep neural networks.\n",
-    "- Input: a protein sequence\n",
-    "- Output: aggregation propensity profile"
+    "User-friendy notebook to calculate aggregation propensities using protein language models and deep neural networks.\n",
+    "- Input: an uniprot id or a protein sequence.\n",
+    "- Output: aggregation propensity profile."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c398e5c6",
+   "metadata": {},
+   "source": [
+    "# 1. Set up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "17b2688f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#@title Input protein data\n",
-    "#@markdown Enter a protein sequence in the box below. The sequence should be in single-letter amino acid code format (e.g., \"M\", \"D\", \"V\", etc.). The sequence will be processed and converted into a DataFrame for further analysis.\n",
+    "#@markdown Enter a protein sequence in the box below.\n",
     "#@markdown You can also use the example sequence provided below.\n",
-    "uniprot_id = \"P37840\"  #@param {type:\"string\"}\n",
+    "uniprot_id = \"\"  #@param {type:\"string\"}\n",
     "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
+    "\n",
+    "# If a UniProt ID is provided, fetch the sequence from UniProt\n",
+    "if not uniprot_id:\n",
+    "    uniprot_id = \"P37840\" # Default UniProt ID if none is provided\n",
+    "if uniprot_id:\n",
+    "    import requests\n",
+    "    url = f\"https://www.uniprot.org/uniprot/{uniprot_id}.fasta\"\n",
+    "    response = requests.get(url)\n",
+    "    if response.status_code == 200:\n",
+    "        # Parse the FASTA format\n",
+    "        fasta_lines = response.text.strip().split('\\n')\n",
+    "        input_sequence = ''.join(fasta_lines[1:])  # Join all lines except the first (header)\n",
+    "    else:\n",
+    "        raise ValueError(f\"Failed to fetch sequence for UniProt ID {uniprot_id}. Status code: {response.status_code}\")\n",
+    "\n",
     "# To dataframe\n",
     "import pandas as pd\n",
     "df = pd.DataFrame({'uniprot_id': [uniprot_id], 'sequence': [input_sequence]})"
@@ -36,6 +59,7 @@
    "outputs": [],
    "source": [
     "#@title Download models from HuggingFace\n",
+    "#@markdown This fetches the AggrescanAI models needed for prediction.\n",
     "import os\n",
     "import urllib.request\n",
     "from tqdm import tqdm\n",
@@ -69,6 +93,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a392d941",
+   "metadata": {},
+   "source": [
+    "# 2. Predict"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d84b1741",
@@ -76,6 +108,7 @@
    "outputs": [],
    "source": [
     "#@title Load models\n",
+    "#@markdown This loads the AggrescanAI models into memory for prediction.\n",
     "from tensorflow.keras.models import load_model\n",
     "models = [load_model(f\"models/balanced_models/{os.path.basename(fname)}\", compile= False) for fname in model_names]\n",
     "homology_models = [load_model(f\"models/homology_models/{os.path.basename(fname)}\", compile= False) for fname in homology_model_names]"
@@ -89,6 +122,7 @@
    "outputs": [],
    "source": [
     "#@title Generate embedding representations\n",
+    "#@markdown This generates embedding representations for the input protein sequence using ProtT5.\n",
     "import torch\n",
     "from transformers import T5Tokenizer, T5EncoderModel\n",
     "from tqdm import tqdm\n",
@@ -114,11 +148,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbcb568b",
+   "id": "ed33f0d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Apply soft-voting function\n",
+    "#@title Run Predictions\n",
+    "#@markdown This runs the AggrescanAI models on the generated embeddings to predict aggregation probabilities.\n",
+    "\n",
+    "# Apply soft-voting function\n",
     "import numpy as np\n",
     "def avg_probs(models, X, batch_size=32):\n",
     "    \"\"\"\n",
@@ -145,17 +182,8 @@
     "    p90 = avg_probs(homology_models, embedding)   # (L,)\n",
     "    p33 = avg_probs(models, embedding)   # (L,)\n",
     "    # weighted soft-voting\n",
-    "    return weights[0]*p90 + weights[1]*p33 # (L,)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed33f0d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Run Predictions\n",
+    "    return weights[0]*p90 + weights[1]*p33 # (L,)\n",
+    "\n",
     "tqdm.pandas(desc=\"Computing probabilities\")\n",
     "df[\"prob_vector\"] = df[\"embedding\"].progress_map(ensemble_meta_probs)"
    ]
@@ -176,6 +204,7 @@
    "outputs": [],
    "source": [
     "#@title Visualize results\n",
+    "#@markdown Plot the aggregation prone probability scores across the input sequence.\n",
     "from matplotlib.colors import ListedColormap\n",
     "import plotly.graph_objects as go\n",
     "\n",
@@ -218,8 +247,30 @@
     "        yaxis_title='Probability',\n",
     "        hovermode='x unified'\n",
     "    )\n",
+    "    fig.show()\n",
     "\n",
-    "    fig.show()"
+    "plot_probability_profile(uniprot_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "198eeb02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Download results\n",
+    "#@markdown Download the results as a CSV file and png image.\n",
+    "\n",
+    "def save_results_as_csv(df, filename= f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
+    "    \"\"\"\n",
+    "    Save the DataFrame to a CSV file.\n",
+    "    \"\"\"\n",
+    "    df.to_csv(filename, index=False)\n",
+    "    print(f\"Results saved to {filename}\")\n",
+    "\n",
+    "fig.write_image(f\"aggrescanai_results_{uniprot_id}.png\", dpi=300, scale=2)\n",
+    "save_results_as_csv(df)"
    ]
   }
  ],
