updated notebook - save plot and table formating

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "17b2688f",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,9 @@
     "#@title Input protein data\n",
     "#@markdown Enter a protein sequence in the box below.\n",
     "#@markdown You can also use the example sequence provided below.\n",
+    "import time\n",
+    "start_time = time.time()\n",
+    "\n",
     "uniprot_id = \"\"  #@param {type:\"string\"}\n",
     "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
     "\n",
@@ -193,7 +196,7 @@
    "id": "94cf8a7c",
    "metadata": {},
    "source": [
-    "# Results"
+    "# 3. Results"
    ]
   },
   {
@@ -249,7 +252,8 @@
     "    )\n",
     "    fig.show()\n",
     "\n",
-    "plot_probability_profile(uniprot_id)"
+    "fig = plot_probability_profile(uniprot_id)\n",
+    "fig.show()"
    ]
   },
   {
@@ -261,6 +265,7 @@
    "source": [
     "#@title Download results\n",
     "#@markdown Download the results as a CSV file and png image.\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "def save_results_as_csv(df, filename= f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
     "    \"\"\"\n",
@@ -269,8 +274,18 @@
     "    df.to_csv(filename, index=False)\n",
     "    print(f\"Results saved to {filename}\")\n",
     "\n",
-    "fig.write_image(f\"aggrescanai_results_{uniprot_id}.png\", dpi=300, scale=2)\n",
-    "save_results_as_csv(df)"
+    "result_df = pd.DataFrame({\n",
+    "    \"uniprot_id\": df[\"uniprot_id\"],\n",
+    "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
+    "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
+    "})\n",
+    "\n",
+    "\n",
+    "fig.savefig(f\"aggrescanai_results_{uniprot_id}.png\", dpi=300)\n",
+    "save_results_as_csv(result_df)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "print(f\"Total execution time: {end_time - start_time:.2f} seconds\")"
    ]
   }
  ],
