updated notebook - save plot and table formating...

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "#@title Input protein data\n",
-    "#@markdown Enter a protein sequence in the box below.\n",
+    "#@markdown Enter a protein sequence in the box below. You can input isoforms as well! E.g.: P10636-8\n",
     "#@markdown You can also use the example sequence provided below.\n",
     "import time\n",
     "start_time = time.time()\n",
@@ -40,7 +40,8 @@
     "    uniprot_id = \"P37840\" # Default UniProt ID if none is provided\n",
     "if uniprot_id:\n",
     "    import requests\n",
-    "    url = f\"https://www.uniprot.org/uniprot/{uniprot_id}.fasta\"\n",
+    "    #url = f\"https://www.uniprot.org/uniprot/{uniprot_id}.fasta\"\n",
+    "    url = f\"https://rest.uniprot.org/uniprotkb/{uniprot_id}.fasta\"\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
     "        # Parse the FASTA format\n",
@@ -250,7 +251,7 @@
     "        yaxis_title='Probability',\n",
     "        hovermode='x unified'\n",
     "    )\n",
-    "    fig.show()\n",
+    "    return fig\n",
     "\n",
     "fig = plot_probability_profile(uniprot_id)\n",
     "fig.show()"
