updated notebook - formating cells

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17b2688f",
+   "id": "c85c8669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,18 @@
     "start_time = time.time()\n",
     "\n",
     "uniprot_id = \"\"  #@param {type:\"string\"}\n",
-    "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
+    "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17b2688f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Retrieve sequence from UniProt if needed\n",
+    "#@markdown If you leave the UniProt ID empty, the default UniProt ID will be used.\n",
     "\n",
     "# If a UniProt ID is provided, fetch the sequence from UniProt\n",
     "if not uniprot_id:\n",
@@ -276,7 +287,7 @@
     "    print(f\"Results saved to {filename}\")\n",
     "\n",
     "result_df = pd.DataFrame({\n",
-    "    \"uniprot_id\": df[\"uniprot_id\"],\n",
+    "    \"uniprot_id\": df[\"uniprot_id\"] * len(input_sequence),\n",
     "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
     "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
     "})\n",
