updated notebook - formating cells...

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -8,7 +8,8 @@
     "# AggrescanAI  \n",
     "User-friendy notebook to calculate aggregation propensities using protein language models and deep neural networks.\n",
     "- Input: an uniprot id or a protein sequence.\n",
-    "- Output: aggregation propensity profile."
+    "- Output: aggregation propensity profile.  \n",
+    "- How? Just hit `Runtime` -> `Run all`"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c85c8669",
    "metadata": {},
    "outputs": [],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "17b2688f",
    "metadata": {},
    "outputs": [],
@@ -287,7 +288,7 @@
     "    print(f\"Results saved to {filename}\")\n",
     "\n",
     "result_df = pd.DataFrame({\n",
-    "    \"uniprot_id\": df[\"uniprot_id\"] * len(input_sequence),\n",
+    "    \"uniprot_id\": [uniprot_id]* len(input_sequence),\n",
     "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
     "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
     "})\n",
