updated notebook - formating cells...

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -294,7 +294,7 @@
     "})\n",
     "\n",
     "\n",
-    "fig.savefig(f\"aggrescanai_results_{uniprot_id}.png\", dpi=300)\n",
+    "fig.write_image(f\"aggrescanai_results_{uniprot_id}.png\")\n",
     "save_results_as_csv(result_df)\n",
     "\n",
     "end_time = time.time()\n",
