--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -279,23 +279,33 @@
     "#@title Download results\n",
     "#@markdown Download the results as a CSV file and png image.\n",
     "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display\n",
+    "from google.colab import files\n",
     "\n",
     "def save_results_as_csv(df, filename= f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
-    "    \"\"\"\n",
-    "    Save the DataFrame to a CSV file.\n",
-    "    \"\"\"\n",
     "    df.to_csv(filename, index=False)\n",
+    "    files.download(filename)\n",
     "    print(f\"Results saved to {filename}\")\n",
     "\n",
     "result_df = pd.DataFrame({\n",
     "    \"uniprot_id\": [uniprot_id]* len(input_sequence),\n",
     "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
+    "    \"residue\": list(input_sequence),\n",
     "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
     "})\n",
     "\n",
+    "# Interactive table view\n",
+    "fig_table = go.Figure(data=[go.Table(\n",
+    "    header=dict(values=list(result_df.columns), fill_color='paleturquoise', align='left'),\n",
+    "    cells=dict(values=[result_df[col] for col in result_df.columns], fill_color='lavender', align='left')\n",
+    ")])\n",
+    "display(fig_table)\n",
     "\n",
-    "fig.write_image(f\"aggrescanai_results_{uniprot_id}.png\")\n",
+    "# Download\n",
     "save_results_as_csv(result_df)\n",
+    "# Save plot as HTML\n",
+    "fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
+    "files.download(f\"aggrescanai_results_{uniprot_id}.html\")\n",
     "\n",
     "end_time = time.time()\n",
     "print(f\"Total execution time: {end_time - start_time:.2f} seconds\")"
