updated notebook - download functions...

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -221,8 +221,8 @@
    "source": [
     "#@title Visualize results\n",
     "#@markdown Plot the aggregation prone probability scores across the input sequence.\n",
-    "from matplotlib.colors import ListedColormap\n",
     "import plotly.graph_objects as go\n",
+    "from google.colab import files\n",
     "\n",
     "def plot_probability_profile(uniprot_id: str, threshold: float = 0.5):\n",
     "    \"\"\"\n",
@@ -266,7 +266,11 @@
     "    return fig\n",
     "\n",
     "fig = plot_probability_profile(uniprot_id)\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "# Download figure\n",
+    "fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
+    "files.download(f\"aggrescanai_results_{uniprot_id}.html\")"
    ]
   },
   {
@@ -276,11 +280,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Download results\n",
-    "#@markdown Download the results as a CSV file and png image.\n",
+    "#@title Interactive table with AggrescanAI scores\n",
+    "#@markdown Download the results as a CSV file.\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
-    "from google.colab import files\n",
     "\n",
     "def save_results_as_csv(df, filename= f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
     "    df.to_csv(filename, index=False)\n",
@@ -303,9 +306,6 @@
     "\n",
     "# Download\n",
     "save_results_as_csv(result_df)\n",
-    "# Save plot as HTML\n",
-    "fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
-    "files.download(f\"aggrescanai_results_{uniprot_id}.html\")\n",
     "\n",
     "end_time = time.time()\n",
     "print(f\"Total execution time: {end_time - start_time:.2f} seconds\")"
