updated notebook - download functions...

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c85c8669",
    "metadata": {},
    "outputs": [],
@@ -30,11 +30,10 @@
     "#@title Input protein data\n",
     "#@markdown Enter a protein sequence in the box below. You can input isoforms as well! E.g.: P10636-8\n",
     "#@markdown You can also use the example sequence provided below.\n",
-    "import time\n",
-    "start_time = time.time()\n",
-    "\n",
     "uniprot_id = \"\"  #@param {type:\"string\"}\n",
-    "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}"
+    "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
+    "import time\n",
+    "start_time = time.time()"
    ]
   },
   {
@@ -268,9 +267,9 @@
     "fig = plot_probability_profile(uniprot_id)\n",
     "fig.show()\n",
     "\n",
-    "# Download figure\n",
-    "fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
-    "files.download(f\"aggrescanai_results_{uniprot_id}.html\")"
+    "# # Download figure\n",
+    "# fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
+    "# files.download(f\"aggrescanai_results_{uniprot_id}.html\")"
    ]
   },
   {
@@ -304,8 +303,38 @@
     ")])\n",
     "display(fig_table)\n",
     "\n",
-    "# Download\n",
+    "# # Download\n",
+    "# save_results_as_csv(result_df)\n",
+    "\n",
+    "\n",
+    "# Save plot and table\n",
+    "import base64\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "# Encode Plotly figure to PNG and create download link\n",
+    "try:\n",
+    "    png_bytes = fig.to_image(format=\"png\", scale=2)\n",
+    "    b64 = base64.b64encode(png_bytes).decode()\n",
+    "    html_button = f'''\n",
+    "<a download=\"aggrescanai_results_{uniprot_id}.png\"\n",
+    "   href=\"data:image/png;base64,{b64}\"\n",
+    "   style=\"display:inline-block;padding:10px 20px;background-color:#4CAF50;color:white;font-weight:bold;text-decoration:none;border-radius:5px;margin-top:10px;\"\n",
+    "   target=\"_blank\">\n",
+    "   📥 Download Plot as PNG\n",
+    "</a>\n",
+    "'''\n",
+    "    display(HTML(html_button))\n",
+    "except Exception as e:\n",
+    "    print(\"Could not generate PNG for download:\", e)\n",
+    "from google.colab import files\n",
+    "\n",
+    "import plotly.io as pio\n",
+    "fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
+    "files.download(f\"aggrescanai_results_{uniprot_id}.html\")\n",
     "save_results_as_csv(result_df)\n",
+    "files.download(f\"aggrescanai_results_{uniprot_id}.csv\")\n",
+    "\n",
+    "\n",
     "\n",
     "end_time = time.time()\n",
     "print(f\"Total execution time: {end_time - start_time:.2f} seconds\")"
