updating cells config

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Input protein data\n",
+    "#@title Input protein data { display-mode: \"form\" }\n",
     "#@markdown Enter a protein sequence in the box below. You can input isoforms as well! E.g.: P10636-8\n",
     "#@markdown You can also use the example sequence provided below.\n",
     "uniprot_id = \"\"  #@param {type:\"string\"}\n",
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "17b2688f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Retrieve sequence from UniProt if needed\n",
+    "#@title Retrieve sequence from UniProt if needed { display-mode: \"form\" }\n",
     "#@markdown If you leave the UniProt ID empty, the default UniProt ID will be used.\n",
     "\n",
     "# If a UniProt ID is provided, fetch the sequence from UniProt\n",
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Download models from HuggingFace\n",
+    "#@title Download models from HuggingFace { display-mode: \"form\" }\n",
     "#@markdown This fetches the AggrescanAI models needed for prediction.\n",
     "import os\n",
     "import urllib.request\n",
@@ -122,7 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Load models\n",
+    "%%capture\n",
+    "#@title Load models { display-mode: \"form\" }\n",
     "#@markdown This loads the AggrescanAI models into memory for prediction.\n",
     "from tensorflow.keras.models import load_model\n",
     "models = [load_model(f\"models/balanced_models/{os.path.basename(fname)}\", compile= False) for fname in model_names]\n",
@@ -136,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Generate embedding representations\n",
+    "#@title Generate embedding representations { display-mode: \"form\" }\n",
     "#@markdown This generates embedding representations for the input protein sequence using ProtT5.\n",
     "import torch\n",
     "from transformers import T5Tokenizer, T5EncoderModel\n",
@@ -167,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Run Predictions\n",
+    "#@title Run Predictions { display-mode: \"form\" }\n",
     "#@markdown This runs the AggrescanAI models on the generated embeddings to predict aggregation probabilities.\n",
     "\n",
     "# Apply soft-voting function\n",
@@ -218,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Visualize results\n",
+    "#@title Visualize results { display-mode: \"form\" }\n",
     "#@markdown Plot the aggregation prone probability scores across the input sequence.\n",
     "import plotly.graph_objects as go\n",
     "from google.colab import files\n",
@@ -279,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Interactive table with AggrescanAI scores\n",
+    "#@title Interactive table with AggrescanAI scores { display-mode: \"form\" }\n",
     "#@markdown Download the results as a CSV file.\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
