updating cells config

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -30,8 +30,17 @@
     "#@title Input protein data { display-mode: \"form\" }\n",
     "#@markdown Enter a protein sequence in the box below. You can input isoforms as well! E.g.: P10636-8\n",
     "#@markdown You can also use the example sequence provided below.\n",
+    "# uniprot_id = \"\"  #@param {type:\"string\"}\n",
+    "# input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
+    "use_example= True  #@param {type:\"boolean\"}\n",
     "uniprot_id = \"\"  #@param {type:\"string\"}\n",
-    "input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
+    "input_sequence = \"\"  #@param {type:\"string\"}\n",
+    "\n",
+    "if use_example:\n",
+    "    # Example sequence for testing\n",
+    "    uniprot_id = \"P37840\"  # Example UniProt ID\n",
+    "    input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"\n",
+    "#@markdown ---\n",
     "import time\n",
     "start_time = time.time()"
    ]
@@ -47,10 +56,11 @@
     "#@markdown If you leave the UniProt ID empty, the default UniProt ID will be used.\n",
     "\n",
     "# If a UniProt ID is provided, fetch the sequence from UniProt\n",
-    "if not uniprot_id:\n",
-    "    uniprot_id = \"P37840\" # Default UniProt ID if none is provided\n",
-    "if uniprot_id:\n",
+    "# if not uniprot_id:\n",
+    "#     uniprot_id = \"P37840\" # Default UniProt ID if none is provided\n",
+    "if not use_example and uniprot_id:\n",
     "    import requests\n",
+    "    uniprot_id = uniprot_id.strip()  # Clean up any whitespace\n",
     "    #url = f\"https://www.uniprot.org/uniprot/{uniprot_id}.fasta\"\n",
     "    url = f\"https://rest.uniprot.org/uniprotkb/{uniprot_id}.fasta\"\n",
     "    response = requests.get(url)\n",
