--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -9,7 +9,7 @@
     "User-friendy notebook to calculate aggregation propensities using protein language models and deep neural networks.\n",
     "- Input: an uniprot id or a protein sequence.\n",
     "- Output: aggregation propensity profile.  \n",
-    "- How? Just hit `Runtime` -> `Run all`"
+    "- How? Just hit `Runtime` -> `Run all` or press ctrl+F9"
    ]
   },
   {
@@ -28,12 +28,14 @@
    "outputs": [],
    "source": [
     "#@title Input protein data { display-mode: \"form\" }\n",
-    "#@markdown Enter a protein sequence in the box below. You can input isoforms as well! E.g.: P10636-8\n",
+    "\n",
     "#@markdown You can also use the example sequence provided below.\n",
     "# uniprot_id = \"\"  #@param {type:\"string\"}\n",
     "# input_sequence = \"MDVFMKGLSKAKEGVVAAAEKTKQGVAEAAGKTKEGVLYVGSKTKEGVVHGVATVAEKTKEQVTNVGGAVVTGVTAVAQKTVEGAGSIAAATGFVKKDQLGKNEEGAPQEGILEDMPVDPDNEAYEMPSEEGYQDYEPEA\"  #@param {type:\"string\"}\n",
-    "use_example= True  #@param {type:\"boolean\"}\n",
+    "use_example= False  #@param {type:\"boolean\"}\n",
+    "#@markdown Enter an UniProt ID in the box below. You can input isoforms as well! E.g.: P10636-8\n",
     "uniprot_id = \"\"  #@param {type:\"string\"}\n",
+    "#@markdown Instead you can input a protein sequence directly in the box below. If you leave this empty, the script will attempt to fetch the sequence using the UniProt ID provided above.\n",
     "input_sequence = \"\"  #@param {type:\"string\"}\n",
     "\n",
     "if use_example:\n",
@@ -71,10 +73,20 @@
     "    else:\n",
     "        raise ValueError(f\"Failed to fetch sequence for UniProt ID {uniprot_id}. Status code: {response.status_code}\")\n",
     "\n",
+    "# Clean up the sequence\n",
+    "input_sequence = input_sequence.replace(' ', '').replace('\\n', '').upper()  # Clean up the sequence\n",
     "# To dataframe\n",
     "import pandas as pd\n",
     "df = pd.DataFrame({'uniprot_id': [uniprot_id], 'sequence': [input_sequence]})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89625a37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -225,16 +237,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "198eeb02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Interactive table with AggrescanAI scores { display-mode: \"form\" }\n",
+    "#@markdown Download the results as a CSV file.\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display\n",
+    "\n",
+    "def save_results_as_csv(df, filename= f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
+    "    df.to_csv(filename, index=False)\n",
+    "    files.download(filename)\n",
+    "    print(f\"Results saved to {filename}\")\n",
+    "\n",
+    "result_df = pd.DataFrame({\n",
+    "    \"uniprot_id\": [uniprot_id]* len(input_sequence),\n",
+    "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
+    "    \"residue\": list(input_sequence),\n",
+    "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
+    "})\n",
+    "\n",
+    "# Interactive table view\n",
+    "fig_table = go.Figure(data=[go.Table(\n",
+    "    header=dict(values=list(result_df.columns), fill_color='paleturquoise', align='left'),\n",
+    "    cells=dict(values=[result_df[col] for col in result_df.columns], fill_color='lavender', align='left')\n",
+    ")])\n",
+    "display(fig_table)\n",
+    "\n",
+    "# # Download\n",
+    "# save_results_as_csv(result_df)\n",
+    "\n",
+    "\n",
+    "# # Save plot and table\n",
+    "# import base64\n",
+    "# from IPython.display import HTML\n",
+    "\n",
+    "# # Encode Plotly figure to PNG and create download link\n",
+    "# try:\n",
+    "#     png_bytes = fig.to_image(format=\"png\", scale=2)\n",
+    "#     b64 = base64.b64encode(png_bytes).decode()\n",
+    "#     html_button = f'''\n",
+    "# <a download=\"aggrescanai_results_{uniprot_id}.png\"\n",
+    "#    href=\"data:image/png;base64,{b64}\"\n",
+    "#    style=\"display:inline-block;padding:10px 20px;background-color:#4CAF50;color:white;font-weight:bold;text-decoration:none;border-radius:5px;margin-top:10px;\"\n",
+    "#    target=\"_blank\">\n",
+    "#    📥 Download Plot as PNG\n",
+    "# </a>\n",
+    "# '''\n",
+    "#     display(HTML(html_button))\n",
+    "# except Exception as e:\n",
+    "#    print(\"Could not generate PNG for download:\", e)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# from google.colab import files\n",
+    "\n",
+    "# import plotly.io as pio\n",
+    "# fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
+    "# files.download(f\"aggrescanai_results_{uniprot_id}.html\")\n",
+    "# save_results_as_csv(result_df)\n",
+    "# files.download(f\"aggrescanai_results_{uniprot_id}.csv\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# end_time = time.time()\n",
+    "# print(f\"Total execution time: {(end_time - start_time:.2f)/60} minutes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7423249f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#@title Visualize results { display-mode: \"form\" }\n",
     "#@markdown Plot the aggregation prone probability scores across the input sequence.\n",
+    "# Default threshold for aggregation propensity\n",
+    "threshold = 0.3  #@param {type:\"number\", min:0, max:1, step:0.1}\n",
     "import plotly.graph_objects as go\n",
     "from google.colab import files\n",
     "\n",
-    "def plot_probability_profile(uniprot_id: str, threshold: float = 0.5):\n",
+    "def plot_probability_profile(uniprot_id: str, threshold: float = threshold):\n",
     "    \"\"\"\n",
     "    Plot the probability profile per position given an uniprot_id and a threshold.\n",
     "    \"\"\"\n",
@@ -286,57 +371,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "198eeb02",
+   "id": "1cf614e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Interactive table with AggrescanAI scores { display-mode: \"form\" }\n",
-    "#@markdown Download the results as a CSV file.\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import display\n",
-    "\n",
-    "def save_results_as_csv(df, filename= f\"aggrescanai_results_{uniprot_id}.csv\"):\n",
-    "    df.to_csv(filename, index=False)\n",
-    "    files.download(filename)\n",
-    "    print(f\"Results saved to {filename}\")\n",
-    "\n",
-    "result_df = pd.DataFrame({\n",
-    "    \"uniprot_id\": [uniprot_id]* len(input_sequence),\n",
-    "    \"position\": list(range(1, len(input_sequence) + 1)),\n",
-    "    \"residue\": list(input_sequence),\n",
-    "    \"aggrescanai_score\": df[\"prob_vector\"].values[0]\n",
-    "})\n",
-    "\n",
-    "# Interactive table view\n",
-    "fig_table = go.Figure(data=[go.Table(\n",
-    "    header=dict(values=list(result_df.columns), fill_color='paleturquoise', align='left'),\n",
-    "    cells=dict(values=[result_df[col] for col in result_df.columns], fill_color='lavender', align='left')\n",
-    ")])\n",
-    "display(fig_table)\n",
-    "\n",
-    "# # Download\n",
-    "# save_results_as_csv(result_df)\n",
-    "\n",
-    "\n",
-    "# Save plot and table\n",
-    "import base64\n",
-    "from IPython.display import HTML\n",
-    "\n",
-    "# Encode Plotly figure to PNG and create download link\n",
-    "try:\n",
-    "    png_bytes = fig.to_image(format=\"png\", scale=2)\n",
-    "    b64 = base64.b64encode(png_bytes).decode()\n",
-    "    html_button = f'''\n",
-    "<a download=\"aggrescanai_results_{uniprot_id}.png\"\n",
-    "   href=\"data:image/png;base64,{b64}\"\n",
-    "   style=\"display:inline-block;padding:10px 20px;background-color:#4CAF50;color:white;font-weight:bold;text-decoration:none;border-radius:5px;margin-top:10px;\"\n",
-    "   target=\"_blank\">\n",
-    "   📥 Download Plot as PNG\n",
-    "</a>\n",
-    "'''\n",
-    "    display(HTML(html_button))\n",
-    "except Exception as e:\n",
-    "    print(\"Could not generate PNG for download:\", e)\n",
+    "#@title Download results { display-mode: \"form\" }\n",
     "from google.colab import files\n",
     "\n",
     "import plotly.io as pio\n",
@@ -348,7 +387,7 @@
     "\n",
     "\n",
     "end_time = time.time()\n",
-    "print(f\"Total execution time: {end_time - start_time:.2f} seconds\")"
+    "print(f\"Total execution time: {(end_time - start_time:.2f)/60} minutes\")"
    ]
   }
  ],
