updating inputs and outputs

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -75,6 +75,12 @@
     "\n",
     "# Clean up the sequence\n",
     "input_sequence = input_sequence.replace(' ', '').replace('\\n', '').upper()  # Clean up the sequence\n",
+    "if input_sequence == \"\":\n",
+    "    raise ValueError(\"⚠️ No sequence provided. Please provide a valid UniProt ID or a protein sequence.\")\n",
+    "# Check if the sequence is valid\n",
+    "if not all(c in 'ACDEFGHIKLMNPQRSTVWY' for c in input_sequence):\n",
+    "    raise ValueError(\"⚠️ Invalid sequence provided. Please ensure the sequence contains only valid amino acid characters (A, C, D, E, F, G, H, I, K, L, M, N, P, Q, R, S, T, V, W, Y).\")\n",
+    "\n",
     "# To dataframe\n",
     "import pandas as pd\n",
     "df = pd.DataFrame({'uniprot_id': [uniprot_id], 'sequence': [input_sequence]})"
@@ -265,44 +271,12 @@
     ")])\n",
     "display(fig_table)\n",
     "\n",
-    "# # Download\n",
-    "# save_results_as_csv(result_df)\n",
-    "\n",
-    "\n",
-    "# # Save plot and table\n",
-    "# import base64\n",
-    "# from IPython.display import HTML\n",
-    "\n",
-    "# # Encode Plotly figure to PNG and create download link\n",
-    "# try:\n",
-    "#     png_bytes = fig.to_image(format=\"png\", scale=2)\n",
-    "#     b64 = base64.b64encode(png_bytes).decode()\n",
-    "#     html_button = f'''\n",
-    "# <a download=\"aggrescanai_results_{uniprot_id}.png\"\n",
-    "#    href=\"data:image/png;base64,{b64}\"\n",
-    "#    style=\"display:inline-block;padding:10px 20px;background-color:#4CAF50;color:white;font-weight:bold;text-decoration:none;border-radius:5px;margin-top:10px;\"\n",
-    "#    target=\"_blank\">\n",
-    "#    📥 Download Plot as PNG\n",
-    "# </a>\n",
-    "# '''\n",
-    "#     display(HTML(html_button))\n",
-    "# except Exception as e:\n",
-    "#    print(\"Could not generate PNG for download:\", e)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# from google.colab import files\n",
-    "\n",
-    "# import plotly.io as pio\n",
-    "# fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
-    "# files.download(f\"aggrescanai_results_{uniprot_id}.html\")\n",
-    "# save_results_as_csv(result_df)\n",
-    "# files.download(f\"aggrescanai_results_{uniprot_id}.csv\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# end_time = time.time()\n",
-    "# print(f\"Total execution time: {(end_time - start_time:.2f)/60} minutes\")"
+    "# Interactive table view\n",
+    "fig_table = go.Figure(data=[go.Table(\n",
+    "    header=dict(values=list(result_df.columns), fill_color='paleturquoise', align='left'),\n",
+    "    cells=dict(values=[result_df[col].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x) for col in result_df.columns], fill_color='lavender', align='left')\n",
+    ")])\n",
+    "display(fig_table)\n"
    ]
   },
   {
@@ -330,19 +304,21 @@
     "        return\n",
     "    prob_vector = df.loc[mask, 'prob_vector'].values[0]\n",
     "    positions = np.arange(1, len(prob_vector) + 1)\n",
+    "    residues = list(df.loc[0, \"sequence\"])\n",
     "\n",
     "    # Create figure\n",
     "    fig = go.Figure()\n",
     "\n",
     "    # Plot probability profile\n",
     "    fig.add_trace(go.Scatter(\n",
-    "        x=positions,\n",
+    "        x= positions,\n",
     "        y=prob_vector,\n",
     "        mode='lines+markers',\n",
     "        name='Probability',\n",
-    "        hovertemplate='Position %{x}<br>Prob: %{y:.3f}<extra></extra>'\n",
-    "    ))\n",
+    "        hovertemplate='Position %{x}<br>Residue %{text}<br>Aggregation Propensity: %{y:.3f}<extra></extra>',\n",
+    "        text=residues\n",
     "\n",
+    "    ))\n",
     "    # Set threshold line\n",
     "    fig.add_trace(go.Scatter(\n",
     "        x=[positions[0], positions[-1]],\n",
@@ -355,17 +331,13 @@
     "    fig.update_layout(\n",
     "        title=f'Aggregation probability profile: {uniprot_id}',\n",
     "        xaxis_title='Position',\n",
-    "        yaxis_title='Probability',\n",
+    "        yaxis_title='Aggregation Propensity',\n",
     "        hovermode='x unified'\n",
     "    )\n",
     "    return fig\n",
     "\n",
     "fig = plot_probability_profile(uniprot_id)\n",
-    "fig.show()\n",
-    "\n",
-    "# # Download figure\n",
-    "# fig.write_html(f\"aggrescanai_results_{uniprot_id}.html\")\n",
-    "# files.download(f\"aggrescanai_results_{uniprot_id}.html\")"
+    "fig.show()"
    ]
   },
   {
@@ -384,10 +356,39 @@
     "save_results_as_csv(result_df)\n",
     "files.download(f\"aggrescanai_results_{uniprot_id}.csv\")\n",
     "\n",
-    "\n",
-    "\n",
     "end_time = time.time()\n",
     "print(f\"Total execution time: {(end_time - start_time:.2f)/60} minutes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ba70f12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Combined plot and table display\n",
+    "# from plotly.subplots import make_subplots\n",
+    "# combined_fig = make_subplots(\n",
+    "#     rows=1, cols=2,\n",
+    "#     shared_yaxes=False,\n",
+    "#     horizontal_spacing=0.1,\n",
+    "#     column_widths=[0.3, 0.6],\n",
+    "#     specs=[[{\"type\": \"table\"}, {\"type\": \"xy\"}]]\n",
+    "# )\n",
+    "\n",
+    "# # Add APR probability plot\n",
+    "# combined_fig.add_trace(fig.data[0], row=1, col=2)\n",
+    "# combined_fig.add_trace(fig.data[1], row=1, col=2)\n",
+    "\n",
+    "# # Add table\n",
+    "# combined_fig.add_trace(go.Table(\n",
+    "#     header=dict(values=list(result_df.columns), fill_color='rgba(0,0,0,0)', align='left'),\n",
+    "#     cells=dict(values=[result_df[col].map(lambda x: f\"{x:.4f}\" if isinstance(x, float) else x) for col in result_df.columns], fill_color='rgba(0,0,0,0)', align='left')\n",
+    "# ), row=1, col=1)\n",
+    "\n",
+    "# combined_fig.update_layout(height=700, width=1500, title_text=\"Aggregation Probability Profile and Result Table\")\n",
+    "# combined_fig.show()"
    ]
   }
  ],
