updating inputs and outputs

--- a/aggrescanai.ipynb
+++ b/aggrescanai.ipynb
@@ -357,7 +357,7 @@
     "files.download(f\"aggrescanai_results_{uniprot_id}.csv\")\n",
     "\n",
     "end_time = time.time()\n",
-    "print(f\"Total execution time: {(end_time - start_time:.2f)/60} minutes\")"
+    "print(f\"Total execution time: {(end_time - start_time)/60:.2f} minutes\")"
    ]
   },
   {
